fix datadeNasc label not showing

--- a/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.scss
+++ b/frontend/src/main/frontend/src/app/main/educador/dialogs/educador/educador-dialog.scss
@@ -84,6 +84,7 @@ md-dialog {
             background-color: rgba(0, 0, 0, 0.03);
             border-top: 1px solid rgba(0, 0, 0, 0.12);
         }
+
     }
 
     .md-datepicker-button.md-icon-button{
@@ -92,5 +93,9 @@ md-dialog {
 
     .md-datepicker-input{
       margin-left: 22px;
+    }
+
+    .nascEducador{
+      margin-right: 25px;
     }
 }
